Fix spacing bug (using Bootstrap 4 code with Bootstrap 5 installed.)

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,24 +17,18 @@ p {
 
 /* Component */
 
-.card {
-  margin: auto;
+.card-body-container {
+  padding: 15px;
 }
 
-.card-img-container {
-  padding: 0;
+.img-fluid {
+  height: 100%;
 }
 
-.card-img {
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
-}
-
-.card-area {
-  padding-top: 15px;
+.card-department {
   color: hsl(228, 12%, 48%);
   font-family: "Montserrat";
-  letter-spacing: 0.3rem;
+  letter-spacing: 0.25rem;
 }
 
 .card-title {
@@ -44,8 +38,28 @@ p {
 
 .card-text {
   padding-top: 15px;
+  padding-bottom: 10px;
   color: hsl(228, 12%, 48%);
   font-family: "Montserrat";
+}
+
+.prices-text {
+  display: table;
+}
+
+.current-price {
+  color: hsl(158, 36%, 37%);
+  font-family: "Fraunces";
+  font-size: 2rem;
+  padding-right: 1.5rem;
+}
+
+.old-price {
+  font-family: "Montserrat";
+  color: hsl(228, 12%, 48%);
+  text-decoration: line-through;
+  vertical-align: middle;
+  display: table-cell;
 }
 
 /* Footer */
